--- a/WlipperForm.de.resx
+++ b/WlipperForm.de.resx
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -117,21 +117,51 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="toolStripMenuItemClear.Size" type="System.Drawing.Size, System.Drawing">
+    <value>254, 22</value>
+  </data>
   <data name="toolStripMenuItemClear.Text" xml:space="preserve">
     <value>Verlauf leeren</value>
+  </data>
+  <data name="toolStripSeparator3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>251, 6</value>
+  </data>
+  <data name="toolStripSeparator2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>251, 6</value>
+  </data>
+  <data name="toolStripMenuItemPreferences.Size" type="System.Drawing.Size, System.Drawing">
+    <value>254, 22</value>
   </data>
   <data name="toolStripMenuItemPreferences.Text" xml:space="preserve">
     <value>Präferenzen</value>
   </data>
+  <data name="reregisterToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>254, 22</value>
+  </data>
+  <data name="reregisterToolStripMenuItem.Text" xml:space="preserve">
+    <value>Erneut an die Zwischenablage anhängen</value>
+  </data>
+  <data name="reregisterToolStripMenuItem.ToolTipText" xml:space="preserve">
+    <value>Benutzen Sie dies, falls Wlipper neue Elemente der Zwischanablage nicht aufnimmt.</value>
+  </data>
+  <data name="toolStripMenuItemHelp.Size" type="System.Drawing.Size, System.Drawing">
+    <value>254, 22</value>
+  </data>
   <data name="toolStripMenuItemHelp.Text" xml:space="preserve">
     <value>Hilfe</value>
+  </data>
+  <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>251, 6</value>
+  </data>
+  <data name="toolStripMenuItemQuit.Size" type="System.Drawing.Size, System.Drawing">
+    <value>254, 22</value>
   </data>
   <data name="toolStripMenuItemQuit.Text" xml:space="preserve">
     <value>Beenden</value>
   </data>
-  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="contextMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>223, 154</value>
+    <value>255, 154</value>
   </data>
   <data name="notifyIcon.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
