Some more TODOs

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,3 @@
 - Try WM_DRAWCLIPBOARD or a different event message for being informed about clipboard changes in the future.
+- Old certificate expired
+- Language resources not linked permanently
