--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,4 @@
 - Mention two buttons mouse in requirements list
 - Cut off tail of license file 
 - Turn into a single instance only application
+- Add notification about updates
