--- a/TODO.txt
+++ b/TODO.txt
@@ -6,3 +6,4 @@
 - Cut off tail of license file 
 - Turn into a single instance only application
 - Add notification about updates
+- Complete the file listing with languages added in the read me file
