--- a/Localization.resx
+++ b/Localization.resx
@@ -133,4 +133,11 @@
   <data name="NOSAVE" xml:space="preserve">
     <value>Unable to save preferences!</value>
   </data>
+  <data name="UPDATE_AVAILABLE" xml:space="preserve">
+    <value>A new version of Wlipper is available. New version: {0}, current version: {1} - Do you want to visit the project web site for download?</value>
+    <comment>{0} = new version, {1} = current version</comment>
+  </data>
+  <data name="UPDATE_FAIL" xml:space="preserve">
+    <value>Checking for update failed!</value>
+  </data>
 </root>
