--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,5 @@
 When updating the version number, remember:
 2x AssemblyInfo.cs
 2x ReadMe.htm
+1x wlipper.xml
 ---
-
-WM_DRAWCLIPBOARD
-certificate
-Add notification about updates
