--- a/Naming.resx
+++ b/Naming.resx
@@ -123,7 +123,13 @@
   <data name="HTML_ENDING" xml:space="preserve">
     <value>.htm</value>
   </data>
+  <data name="PROJECT_SITE" xml:space="preserve">
+    <value>http://wlipper.sourceforge.net/</value>
+  </data>
   <data name="README" xml:space="preserve">
     <value>ReadMe.htm</value>
+  </data>
+  <data name="UPDATE_URL" xml:space="preserve">
+    <value>http://wlipper.sourceforge.net/wlipper.xml</value>
   </data>
 </root>
